--- a/css/style.css
+++ b/css/style.css
@@ -132,15 +132,19 @@ body {
     position: relative;
 }
 
-/* .hero__container::after {
+.hero__container::after {
     content: '';
     background: url(../images/hero/hero__bg.png);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    inset: 0;    
-} */
+    top: 0; 
+    right: 0;  
+    width: 50%;
+    height: 100%;
+    z-index: 10; 
+}
 
 .hero__content {
     padding-top: 50px;
@@ -158,7 +162,7 @@ body {
     position: relative;
 }
 
-.hero__images::after {
+/* .hero__images::after {
     content: '';
     background: url(../images/hero/hero__bg.png);
     background-position: 0 0;
@@ -166,7 +170,7 @@ body {
     background-size: cover;
     position: absolute;
     inset: 0;    
-}
+} */
 
 .hero__descr {
     padding-bottom: 42px;
@@ -411,9 +415,14 @@ body {
     margin-bottom: 80px;    
 }
 
-.function__title {
+.functions__container {
+    text-align: center;
+}
+
+.functions__title {
     margin-bottom: 33px;
     max-width: 60%;
+    text-align: left;
 }
 
 .function__descr {
@@ -421,13 +430,14 @@ body {
     font-size: 20px;
     line-height: 32px;
     max-width: 60%;
+    text-align: left;
 }
 
 .function__link {
+    margin: 0 auto;
     margin-bottom: 91px;
     display: inline-block;
-    width: 100%;
-    text-align: center;
+    
 }
 
 .function__list {
